--- a/src/backupApp.css
+++ b/src/backupApp.css
@@ -6,28 +6,18 @@
   font-family: poppins;
 }
 
-/* colors from light to dark: */
-
-:root {
-  --light: whitesmoke;
-  --mLight: #7882a4;
-  --mDark: #6B728E;
-  --dark: #404258;
-  --accent: plum;
-}
-
 header{
   min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--dark);
-  color: var(--light);
+  background-color: #404258;
+  color: whitesmoke;
 }
 
 main{
-  background-color: var(--mDark);
+  background-color: #6B728E;
   min-height: 90vh;
   min-width: 100vw;
   display: flex;
@@ -37,14 +27,14 @@ main{
 
 .card{
   display: flex;
-  background-color: var(--light);
+  background-color: whitesmoke;
   flex-direction: column;
   justify-content: space-evenly;
   border-radius: 30px;
   align-items: center;
   height: 80vh;
   width: 50%;
-
+  /* border: 1px solid #6B728E; */
   box-shadow: #404258 5px 5px, #484A5D 10px 10px, #505162 15px 15px, #585967
   20px 20px, #6B728E 25px 25px;
   transition: 0.3s;
@@ -54,7 +44,7 @@ main{
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 2px solid var(--dark);
+  border-bottom: 2px solid #454656;
   position: relative;
   margin: 4rem auto 1rem;
 }
@@ -65,7 +55,7 @@ main{
   display: block;
   height: 4px;
   width: 100%;
-  background: var(--accent);
+  background: plum;
   transform: scaleX(0);
   transform-origin: 0%;
   transition: transform 400ms ease;
@@ -112,12 +102,12 @@ input{
 }
 
 .buttons:hover{
-  background-color: var(--accent);
+  background-color: plum;
 }
 
 
 .title{
-  border-bottom: 2px solid var(--accent);
+  border-bottom: 2px solid plum;
   width: fit-content;
 }
 
@@ -125,27 +115,24 @@ input{
   display: grid;
   grid: auto / 1fr 2fr 1fr;
   min-height: 100vh;
-  background-color: var(--mLight);
+  background-color: #7882A4;
 }
 
 .centerFeed{
   margin: 10px;
-  border: 3px solid var(--accent);
-  background-color: var(--mDark);
+  border: 3px solid plum;
+  background-color: white;
   width: 60vw;
 }
 
 .dashboardCenterFeed{
-  
   margin: 10px;
-  /* border: 3px solid var(--accent); */
-  background-color: var(--light);
+  border: 3px solid plum;
+  background-color: white;
   width: 60vw;
   display: grid;
   grid: 1fr/1fr;
   place-content: center;
-
-
 }
 
 .rightFeed{
@@ -153,7 +140,7 @@ input{
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--light);
+  color: whitesmoke;
   margin: 10px;
 }
 
@@ -163,9 +150,9 @@ input{
   width: 70%;
   height: 60px;
   border-radius: 10px;
-  background-color: var(--accent);
+  background-color: plum;
   border: none;
-  color: var(--light);
+  color: whitesmoke;
   cursor: pointer;
   transition: .2s;
 }
@@ -186,13 +173,13 @@ input{
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--light);
+  color: whitesmoke;
   margin: 10px;
 }
 
 .leftFeed button{
   background-color: transparent;
-  color: var(--light);
+  color: whitesmoke;
   font-size: 1.3rem;
   border: none;
   cursor: pointer;
@@ -207,7 +194,7 @@ input{
   margin-top: 10px;
   text-decoration: none;
   font-size: 1.3rem;
-  color: var(--light);
+  color: whitesmoke;
 }
 
 .leftFeed a:hover{
@@ -256,30 +243,18 @@ input{
   overflow-wrap: break-word; */
   display: inline-block;
   width: 100%;
-  border: 1px solid var(--accent);
+  border: 1px solid plum;
   height: 1fr;
   box-sizing: border-box;
 }
 
 
 .verticalPost{
-  background-color: var(--mLight);
+  background-color: whitesmoke;
   height: 100vh;
   overflow-y: auto;
   box-sizing: border-box;
   padding: .5rem;
-}
-
-div.dashboardCenterFeed .verticalPost{
-  background-color: var(--mLight);
-  height: 70vh;
-  overflow-y: auto;
-  box-sizing: border-box;
-  padding: .5rem;
-}
-
-.verticalPost::-webkit-scrollbar{
-  display: none;
 }
 
 .postContainer{
@@ -288,10 +263,10 @@ div.dashboardCenterFeed .verticalPost{
   position: relative;
   border-radius: 16px;
   padding: 1.6rem;
-  background-color: var(--light);
+  background-color: white;
   /* border: 1px solid palegoldenrod; */
   margin: 10px;
-  box-shadow: 0 -1.5rem 3rem rgba(0, 0, 0, 0.45);
+  box-shadow: 0 -1.5rem 2rem rgba(0, 0, 0, 0.45);
   transition: .3s;
 }
 
@@ -312,8 +287,7 @@ div.dashboardCenterFeed .verticalPost{
   display: grid;
   grid: auto / 20vw 60vw 20vw;
   max-height: 100vh;
-  background-color: var(--mLight);
-  overflow: hidden;
+  background-color: #7882A4;
 }
 
 
@@ -322,13 +296,13 @@ div.dashboardCenterFeed .verticalPost{
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--light);
+  color: whitesmoke;
   margin: 10px;
 }
 
 .left button{
   background-color: transparent;
-  color: var(--light);
+  color: whitesmoke;
   font-size: 1.3rem;
   border: none;
   cursor: pointer;
@@ -343,28 +317,17 @@ div.dashboardCenterFeed .verticalPost{
   margin-top: 10px;
   text-decoration: none;
   font-size: 1.3rem;
-  color: var(--light);
+  color: whitesmoke;
 }
 
-.titleBig h1{
-  font-size: 30px;
-  color: var(--dark);
-  translate: 44%;
-}
 
-.titleBig{
-  position: flex;
-  border: 1px solid transparent;
-  border-bottom: var(--accent);
-  border-style: solid;
-}
 
 .feedContainer .right{
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: var(--light);
+  color: whitesmoke;
   margin: 10px;
 }
 
@@ -374,55 +337,20 @@ div.dashboardCenterFeed .verticalPost{
   width: 70%;
   height: 60px;
   border-radius: 10px;
-  background-color: var(--accent);
+  background-color: plum;
   border: none;
-  color: var(--light);
+  color: whitesmoke;
   cursor: pointer;
   transition: .2s;
 }
 
 .right button:hover{
   background-color: #BF82BF;
-  text-decoration: none;
 }
 
 #signoutbtn{
   margin: 0;
 }
-
-.titleContainer {
-  display: grid;
-  grid-template-columns: 1fr/3fr
-}
-
-.titleContainer img {
-  width: 64px;
-  height: 64px;
-  border-radius: 100%;
-}
-
-.titleContainer .profileInfo {
-  position: relative;
-}
-
-.titleContainer .profileInfo h1 {
-  margin: 0;
-  position:absolute;
-  top:50%;
-  translate: 85px -80px;
-  font-weight: 600;
-  font-size: 1.6em;
-}
-.titleContainer .profileInfo h4 {
-  margin: 0;
-  position:absolute;
-  top:50%;
-  opacity: 80%;
-  translate: 85px -50px;
-  font-weight: 300;
-  font-size: 0.9em;
-}
-
 /* .myPosts{
   height: 100%;
   display: flex;
@@ -452,7 +380,7 @@ div.dashboardCenterFeed .verticalPost{
 
 @media only screen and (max-width: 768px) {
   main{
-    background-color: var(--mDark);
+    background-color: #6B728E;
     min-height: 90vh;
     min-width: 100vw;
     display: flex;
@@ -463,7 +391,7 @@ div.dashboardCenterFeed .verticalPost{
   .card{
     display: flex;
     /* turn back to smokewhite when done */
-    background-color: var(--light);
+    background-color: whitesmoke;
     flex-direction: column;
     justify-content: space-evenly;
     border-radius: 30px;
@@ -494,8 +422,8 @@ div.dashboardCenterFeed .verticalPost{
   
   .centerFeed{
     margin: 0px;
-    border: 3px solid var(--accent);
-    background-color: var(--light);
+    border: 3px solid plum;
+    background-color: white;
   }
   
   .postCard{
@@ -510,7 +438,7 @@ div.dashboardCenterFeed .verticalPost{
   }
   
   .title{
-    border-bottom: 2px solid var(--accent);
+    border-bottom: 2px solid plum;
     border-left: 10px;
     width: fit-content;
   }
@@ -520,7 +448,7 @@ div.dashboardCenterFeed .verticalPost{
     display: flex;
     flex-direction: row;
     align-items: center;
-    color: var(--light);
+    color: whitesmoke;
     margin: 10px;
   }
   
@@ -528,7 +456,5 @@ div.dashboardCenterFeed .verticalPost{
     padding-left: 2.4vw;
     padding-right: 2.4vw;
   }
-
-
 
 }
